--- a/app/src/main/res/layout/activity_person_info.xml
+++ b/app/src/main/res/layout/activity_person_info.xml
@@ -37,24 +37,24 @@
                     android:id="@+id/info_company_name_tv"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
                     android:layout_alignParentRight="true"
-                    android:text="Laosi"
-                    android:textColor="#A1A1A1"
-                    android:textSize="15sp"
-                    android:drawableRight="@drawable/btn_arrow_right"
-                    android:drawablePadding="@dimen/public_15dp"
-                    android:layout_toRightOf="@id/info_company_name"
+                    android:layout_centerVertical="true"
                     android:layout_marginLeft="@dimen/public_5dp"
+                    android:layout_toRightOf="@id/info_company_name"
+                    android:drawablePadding="@dimen/public_15dp"
+                    android:drawableRight="@drawable/btn_arrow_right"
+                    android:ellipsize="end"
                     android:gravity="right"
                     android:singleLine="true"
-                    android:ellipsize="end"/>
+                    android:text="Laosi"
+                    android:textColor="#A1A1A1"
+                    android:textSize="15sp" />
             </RelativeLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
-                android:background="#A6A5AB"/>
+                android:background="#A6A5AB" />
 
             <RelativeLayout
                 android:id="@+id/info_contact_name_rl"
@@ -67,30 +67,30 @@
                     android:layout_centerVertical="true"
                     android:text="联系人"
                     android:textColor="@color/app_text_color_black"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/info_contact_name_tv"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
                     android:layout_alignParentRight="true"
-                    android:text="Laosi"
-                    android:textColor="#A1A1A1"
-                    android:textSize="15sp"
-                    android:drawableRight="@drawable/btn_arrow_right"
-                    android:drawablePadding="@dimen/public_15dp"
-                    android:layout_toRightOf="@id/info_contact_name"
+                    android:layout_centerVertical="true"
                     android:layout_marginLeft="@dimen/public_5dp"
+                    android:layout_toRightOf="@id/info_contact_name"
+                    android:drawablePadding="@dimen/public_15dp"
+                    android:drawableRight="@drawable/btn_arrow_right"
+                    android:ellipsize="end"
                     android:gravity="right"
                     android:singleLine="true"
-                    android:ellipsize="end"/>
+                    android:text="Laosi"
+                    android:textColor="#A1A1A1"
+                    android:textSize="15sp" />
             </RelativeLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
-                android:background="#A6A5AB"/>
+                android:background="#A6A5AB" />
 
             <RelativeLayout
                 android:id="@+id/info_postcode_rl"
@@ -103,30 +103,30 @@
                     android:layout_centerVertical="true"
                     android:text="邮编"
                     android:textColor="@color/app_text_color_black"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/info_postcode_tv"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
                     android:layout_alignParentRight="true"
-                    android:text="Laosi"
-                    android:textColor="#A1A1A1"
-                    android:textSize="15sp"
-                    android:drawableRight="@drawable/btn_arrow_right"
-                    android:drawablePadding="@dimen/public_15dp"
-                    android:layout_toRightOf="@id/info_postcode"
+                    android:layout_centerVertical="true"
                     android:layout_marginLeft="@dimen/public_5dp"
+                    android:layout_toRightOf="@id/info_postcode"
+                    android:drawablePadding="@dimen/public_15dp"
+                    android:drawableRight="@drawable/btn_arrow_right"
+                    android:ellipsize="end"
                     android:gravity="right"
                     android:singleLine="true"
-                    android:ellipsize="end"/>
+                    android:text="Laosi"
+                    android:textColor="#A1A1A1"
+                    android:textSize="15sp" />
             </RelativeLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
-                android:background="#A6A5AB"/>
+                android:background="#A6A5AB" />
 
             <RelativeLayout
                 android:id="@+id/info_mobile_phone_rl"
@@ -139,30 +139,30 @@
                     android:layout_centerVertical="true"
                     android:text="手机"
                     android:textColor="@color/app_text_color_black"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/info_mobile_phone_tv"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
                     android:layout_alignParentRight="true"
-                    android:text="Laosi"
-                    android:textColor="#A1A1A1"
-                    android:textSize="15sp"
-                    android:drawableRight="@drawable/btn_arrow_right"
-                    android:drawablePadding="@dimen/public_15dp"
-                    android:layout_toRightOf="@id/info_mobile_phone"
+                    android:layout_centerVertical="true"
                     android:layout_marginLeft="@dimen/public_5dp"
+                    android:layout_toRightOf="@id/info_mobile_phone"
+                    android:drawablePadding="@dimen/public_15dp"
+                    android:drawableRight="@drawable/btn_arrow_right"
+                    android:ellipsize="end"
                     android:gravity="right"
                     android:singleLine="true"
-                    android:ellipsize="end"/>
+                    android:text="Laosi"
+                    android:textColor="#A1A1A1"
+                    android:textSize="15sp" />
             </RelativeLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
-                android:background="#A6A5AB"/>
+                android:background="#A6A5AB" />
 
             <RelativeLayout
                 android:id="@+id/info_phone_num_rl"
@@ -175,30 +175,30 @@
                     android:layout_centerVertical="true"
                     android:text="电话"
                     android:textColor="@color/app_text_color_black"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/info_phone_num_tv"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
                     android:layout_alignParentRight="true"
-                    android:text="Laosi"
-                    android:textColor="#A1A1A1"
-                    android:textSize="15sp"
-                    android:drawableRight="@drawable/btn_arrow_right"
-                    android:drawablePadding="@dimen/public_15dp"
-                    android:layout_toRightOf="@id/info_phone_num"
+                    android:layout_centerVertical="true"
                     android:layout_marginLeft="@dimen/public_5dp"
+                    android:layout_toRightOf="@id/info_phone_num"
+                    android:drawablePadding="@dimen/public_15dp"
+                    android:drawableRight="@drawable/btn_arrow_right"
+                    android:ellipsize="end"
                     android:gravity="right"
                     android:singleLine="true"
-                    android:ellipsize="end"/>
+                    android:text="Laosi"
+                    android:textColor="#A1A1A1"
+                    android:textSize="15sp" />
             </RelativeLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
-                android:background="#A6A5AB"/>
+                android:background="#A6A5AB" />
 
             <RelativeLayout
                 android:id="@+id/info_address_rl"
@@ -212,71 +212,71 @@
                     android:layout_centerVertical="true"
                     android:text="经营地址"
                     android:textColor="@color/app_text_color_black"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/info_address_tv"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
                     android:layout_alignParentRight="true"
-                    android:text="Laosi"
-                    android:textColor="#A1A1A1"
-                    android:textSize="15sp"
-                    android:drawableRight="@drawable/btn_arrow_right"
-                    android:drawablePadding="@dimen/public_15dp"
+                    android:layout_centerVertical="true"
                     android:layout_marginLeft="@dimen/public_5dp"
+                    android:drawablePadding="@dimen/public_15dp"
+                    android:drawableRight="@drawable/btn_arrow_right"
+                    android:ellipsize="end"
                     android:gravity="right"
                     android:singleLine="true"
-                    android:ellipsize="end"/>
+                    android:text="Laosi"
+                    android:textColor="#A1A1A1"
+                    android:textSize="15sp" />
             </RelativeLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
-                android:background="#A6A5AB"/>
+                android:background="#A6A5AB" />
 
             <RelativeLayout
                 android:id="@+id/info_company_profile_rl"
                 style="@style/Mine_Case"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/public_15dp"
-                android:paddingTop="@dimen/public_5dp"
-                android:paddingBottom="@dimen/public_5dp">
+                android:paddingBottom="@dimen/public_5dp"
+                android:paddingTop="@dimen/public_5dp">
 
                 <ImageView
                     android:id="@+id/profile_arrow"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/btn_arrow_right"
+                    android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:layout_alignParentRight="true"/>
+                    android:src="@drawable/btn_arrow_right" />
 
                 <TextView
                     android:id="@+id/info_company_profile"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="经营地址"
+                    android:text="企业简介"
                     android:textColor="@color/app_text_color_black"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/info_company_profile_tv"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/info_company_profile"
+                    android:layout_marginRight="@dimen/public_15dp"
+                    android:layout_marginTop="@dimen/public_5dp"
+                    android:layout_toLeftOf="@id/profile_arrow"
                     android:text="哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈"
                     android:textColor="#A1A1A1"
-                    android:textSize="15sp"
-                    android:layout_marginTop="@dimen/public_5dp"
-                    android:layout_marginRight="@dimen/public_15dp"
-                    android:layout_toLeftOf="@id/profile_arrow"/>
+                    android:textSize="15sp" />
             </RelativeLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
-                android:background="#A6A5AB"/>
+                android:background="#A6A5AB" />
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
