--- a/app/src/main/res/layout/business_tool.xml
+++ b/app/src/main/res/layout/business_tool.xml
@@ -14,6 +14,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
+        android:maxLines="1"
+        android:maxEms="8"
+        android:ellipsize="end"
         android:textColor="@android:color/black"
         android:textSize="20sp"
         tools:text="title"/>
