--- a/app/src/main/res/layout/activity_main_circle.xml
+++ b/app/src/main/res/layout/activity_main_circle.xml
@@ -1,5 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="@color/color_aeaeae"
@@ -16,6 +17,7 @@
         <com.miguelcatalan.materialsearchview.MaterialSearchView
             android:id="@+id/search_view"
             android:layout_width="match_parent"
+            android:hint="查询"
             android:layout_height="wrap_content" />
     </FrameLayout>
 
