--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -76,4 +76,6 @@
 
     <color name="default_clickable_color">#cccccc</color>
     <color name="basic_color_primary">#373b3e</color>
+
+    <color name="black">@android:color/black</color>
 </resources>
