--- a/app/src/main/res/layout/item_contact_list_header.xml
+++ b/app/src/main/res/layout/item_contact_list_header.xml
@@ -20,7 +20,7 @@
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="12dp"
-            android:src="@drawable/default_fmessage"
+            android:src="@drawable/blacklist_icon"
             app:sriv_left_bottom_corner_radius="3dip"
             app:sriv_left_top_corner_radius="3dip"
             app:sriv_right_bottom_corner_radius="3dip"
@@ -33,7 +33,7 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="12dp"
             android:layout_toRightOf="@id/iv_avatar"
-            android:text="新的朋友"
+            android:text="黑名单"
             android:textColor="#353535"
             android:textSize="16sp" />
 
