--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -43,6 +43,8 @@
     <color name="press">#e8e8e8</color>
     <color name="white">#FFFFFF</color>
 
+    <color name="navpage">#FFE1E8EB</color>
+
     <color name="text_line_color">#dfdfdd</color>
     <color name="text_black_color">#333333</color>
     <color name="text_tips_color">#666666</color>
