--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,7 @@
         app:tabTextColor="@color/text_color">
 
         <android.support.design.widget.TabItem
+            android:id="@+id/item_chat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:icon="@drawable/selector_tabbar_conversition"
