--- a/app/src/main/res/layout/activity_mine_circle.xml
+++ b/app/src/main/res/layout/activity_mine_circle.xml
@@ -2,11 +2,22 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="@color/color_aeaeae"
+              android:background="@color/white"
               android:fitsSystemWindows="true"
               android:orientation="vertical">
 
     <include layout="@layout/mine_tool"/>
+
+    <TextView
+        android:id="@+id/textView_desc"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:gravity="left|center_vertical"
+        android:text="上传广告图片，为你的店铺打个免费的广告吧！"
+        android:textColor="@color/text_black_color"
+        android:textSize="16sp"
+        android:visibility="gone"/>
 
     <RelativeLayout
         android:id="@+id/bodyLayout"
