--- a/app/src/main/res/layout/adapter_circle_item.xml
+++ b/app/src/main/res/layout/adapter_circle_item.xml
@@ -26,10 +26,9 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content">
 
                 <TextView
                     android:id="@+id/nameTv"
@@ -39,24 +38,11 @@
                     android:textColor="@color/color_8290AF"
                     android:textSize="15sp"/>
 
-                <TextView
-                    android:id="@+id/urlTipTv"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="15dp"
-                    android:layout_weight="7"
-                    android:ellipsize="end"
-                    android:singleLine="true"
-                    android:text="分享了一个连接"
-                    android:textColor="@color/color_aeaeae"
-                    android:textSize="14sp"
-                    android:visibility="invisible"/>
-
                 <LinearLayout
                     android:id="@+id/communication"
-                    android:layout_width="0dp"
-                    android:layout_height="20dp"
-                    android:layout_weight="3">
+                    android:layout_width="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_height="20dp">
 
                     <ImageView
                         android:layout_width="20dp"
@@ -64,6 +50,7 @@
                         android:src="@drawable/button_talkicon"/>
 
                     <TextView
+                        android:layout_marginLeft="10dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
@@ -73,7 +60,18 @@
                         android:textSize="14sp"/>
 
                 </LinearLayout>
-            </LinearLayout>
+
+                <TextView
+                    android:id="@+id/urlTipTv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:singleLine="true"
+                    android:text="分享了一个连接"
+                    android:textColor="@color/color_aeaeae"
+                    android:textSize="14sp"
+                    android:visibility="gone"/>
+            </RelativeLayout>
 
             <dhcc.cn.com.fix_phone.ui.widget.ExpandTextView
                 android:id="@+id/contentTv"
